--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-iphone-x-helper": "^1.2.1",
+    "react-native-localization": "^2.1.5",
+    "react-native-material-bottom-navigation": "^1.0.4",
+    "react-native-paper": "^2.16.0",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.12.0",
+    "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
@@ -23,5 +34,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./src/assets/fonts/."
+    ]
   }
 }
