--- a/ios/ShallyMaidReactNative/Info.plist
+++ b/ios/ShallyMaidReactNative/Info.plist
@@ -71,6 +71,10 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>AlegreyaSans-Bold.ttf</string>
+		<string>AlegreyaSans-Light.ttf</string>
+		<string>AlegreyaSans-Regular.ttf</string>
+		<string>AlegreyaSans-Thin.ttf</string>
 	</array>
 </dict>
 </plist>
