--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.3.2",
+    "@react-native-community/netinfo": "3.2.1",
+    "moment": "2.24.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-localization": "^2.1.5",
-    "react-native-material-bottom-navigation": "^1.0.4",
-    "react-native-paper": "^2.16.0",
-    "react-native-reanimated": "^1.2.0",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-looped-carousel": "^0.1.13",
+    "react-native-simple-toast": "0.0.8",
+    "react-native-splash-screen": "3.2.0",
+    "react-native-swiper": "^1.5.14",
     "react-navigation": "^3.12.0",
-    "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4"
   },
