--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.2",
     "@react-native-community/netinfo": "3.2.1",
-    "moment": "2.24.0",
+    "moment": "^2.24.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-localization": "^2.1.5",
     "react-native-looped-carousel": "^0.1.13",
+    "react-native-modal-datetime-picker": "^7.5.0",
+    "react-native-radio-button": "^2.0.1",
     "react-native-simple-toast": "0.0.8",
     "react-native-splash-screen": "3.2.0",
     "react-native-swiper": "^1.5.14",
