--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,6 +191,7 @@ dependencies {
     implementation project(':react-native-splash-screen')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+      implementation 'com.facebook.fresco:animated-gif:1.12.0'
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
