--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-cardview": "^2.0.3",
+    "react-native-elements": "^1.2.6",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-localization": "^2.1.5",
@@ -21,9 +22,11 @@
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-radio-button": "^2.0.1",
+    "react-native-radio-buttons-group": "^1.0.7",
     "react-native-simple-toast": "0.0.8",
     "react-native-splash-screen": "3.2.0",
     "react-native-swiper": "^1.5.14",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.12.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
@@ -42,5 +45,4 @@
   "jest": {
     "preset": "react-native"
   }
-  
 }
