--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,8 @@ target 'ShallyMaidReactNative' do
 
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
   target 'ShallyMaidReactNativeTests' do
     inherit! :search_paths
     # Pods for testing
