--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "android": "react-native run-android"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.2",
-    "@react-native-community/netinfo": "3.2.1",
+    "@react-native-community/netinfo": "^3.2.1",
     "moment": "^2.24.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
